@@ -1,7 +1,9 @@
 version 0.7.2 - xxx
  . Demos: ParticleDemo uses touches to move the center of the emitter (issue #138)
+ . Menu: an empty menu can be crated (issue #277)
  . Particles: Use by default fire.pvr (issue #276)
  . Particles: resetSystem actually resets the system (issue #252)
+ . SoundSupport: supports vorbis codec (issue #XXX)      <------------- XXX CREATE ISSUE XXX
  . TextureAtlas: fixed colorarray memory leak (issue #272)
  . TileMapAtlas: supports fullpath (issue #220)
  
